Nu stämmer den överens med övning 1:s instruktion

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduktion</title>
+    <title>Övning 1</title>
 </head>
 <body>
     <main>
-        <h1>Här är min titel</h1>
-        <h2>Detta är en mindre text under titeln</h2>
-     <button><a href="https://www.youtube.com/" alt="En länk som tar dig till framsidan av Youtube.">Här kan du klicka för en go länk till youtube.</a></button>
+        <h1>Övning 1</h1>
+        <h2>Detta är min underrubrik för övning 1</h2>
+        <p>Hej hej detta är en liten paragraf för min första övning</p>
+        <h3>Detta är den tredje rubriken!!</h3>
+        <p>Här är en till paragraf under min tredje rubrik</p>
+        <p>Varför inte en till paragraf precis här.</p>
+        
     
     </main>
 </body>
